# Computational-Intelligence

./: README.md
lab1/: README.md  lab1_sol.ipynb  pyproject.toml
lab2/: README.md  lab2_sol.ipynb  pyproject.toml
lab3/: README.md  lab3_sol.ipynb  pyproject.toml
quarto/: README.md  pyproject.toml
quarto/quarto_files/: GAAgent.py  HardCoded.py  MinMaxAgent.py  RandomPlayer.py  main.py
quarto/quarto_files/quarto/: objects.py
rastrigin/: pyproject.toml  rastrigin.ipynb
